Sweet alert added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="main-container" id="main-container"></div>
 
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="module" src="/js/index-script.js"></script>
 </body>
 </html>
