--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <div class="main-container" id="main-container"></div>
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script type="module" src="/js/index-script.js"></script>
+    <script type="module" src="./js/index-script.js"></script>
 </body>
 </html>
