--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Survey Maker</title>
-    <link rel="icon" type="image/x-icon" href="/images/surveys-icon.webp">
-    <link rel="stylesheet" href="/css/common-properties.css">
-    <link rel="stylesheet" href="/css/details-collector-style.css">
-    <link rel="stylesheet" href="./css/defaultstyle.css">
-</head>
-<body>
+    <link rel="icon" type="image/x-icon" href="/images/surveys-icon.webp" />
+    <link rel="stylesheet" href="/css/common-properties.css" />
+    <link rel="stylesheet" href="/css/details-collector-style.css" />
+    <link rel="stylesheet" href="./css/defaultstyle.css" />
+  </head>
+  <body>
     <div class="main-container" id="main-container"></div>
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="module" src="./js/index-script.js"></script>
-</body>
+  </body>
 </html>
